     - ESRI shapefile write support, useful in GIS applications (see #1066)
 - obspy.clients.neries:
   * Removed the dedicated client. Data can still be accessed by using the FDSN
     client.
 - obspy.imaging:
   * Experimental support for Cartopy when plotting maps. Use the `method`
     argument to functions that plot maps to select between Basemap or Cartopy.
 - obspy.io.mseed:
   * Upgrade to libmseed 2.16
 - obspy.io.shapefile:
   * New module for ESRI shapefile write support (see #1066)
 - obspy.signal:
   * Switch to second-order sections for filters; backported from SciPy 0.16.0
     (see #1028)

0.10.x:
  - obspy.fdsn:
    * More detailed error messages on failing requests (see #1079)
  - obspy.mseed:
    * Blockette 100 is now only written for Traces that need it. Previously
      it was written or not for all Traces, depending on whether the last
      Trace needed it or not. (see #1069)
  - obspy.signal:
    * Bug fixed within rotate.rotate2ZNE(). Additionally it can now also
      perform the inverse rotation (see #1061).
  - obspy.station:
    * ObsPy no longer assumes that the StationXML namespace is the default
      namespace (see #1060).
  - obspy.taup:
    * Calculating arrival times for surface waves now works (see #1055)

0.10.2: (doi: 10.5281/zenodo.17641)
 - obspy.core:
   * Fix catalog plot with events that have no origin depth or
     origin time (see #1021)
 - obspy.datamark:
   * Fix datawide=3 and datawide=0.5 block reading (see #1016)
 - obspy.earthworm:
   * Fix Python3 compatibility problem
 - obspy.imaging:
   * Fix flipped maps due to bug in Basemap
   * Fix handling of velocity reduction in section plots with degree offsets
     (see #1029)
   * Allow section plots over existing figures by not modifying existing lines
   * Don't prematurely close waveform figure if returning its handle
 - obspy.seedlink:
   * Fix Python3 compatibility for seedlink.easyseedlink